<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:padding="10dp" >


    <TextView
        android:text="@string/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitleSettings"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <Switch
        android:text="@string/settings_autoupdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_auto_update"
        android:layout_marginTop="25dp" />

    <Switch
        android:text="@string/settings_wifi_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_wifi_update"
        android:layout_marginTop="25dp" />

    <Switch
        android:text="@string/settings_never_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/switch_never_update"
        android:layout_marginTop="25dp" />

</LinearLayout>