<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/textViewRssItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        tools:text="@string/test_item_name"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/textViewRssItemLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_alignStart="@+id/textViewRssItemName"
        android:layout_below="@+id/textViewRssItemName"
        android:textStyle="bold"
        tools:text="@string/test_item_url" />

    <TextView
        android:id="@+id/textViewRssItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_alignStart="@+id/textViewRssItemLink"
        android:layout_below="@+id/textViewRssItemLink"
        tools:text="@string/test_item_description" />

</RelativeLayout>