<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_edit"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="fr.unicaen.info.dnr2i.rssapplication.EditActivity">

<TextView
    android:text="Edit a RSS feed"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/textViewTitleEditRss"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

<TextView
    android:id="@+id/textViewEditFeedURL"
    android:text="Rss feed url"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@android:color/black"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:layout_below="@+id/textViewTitleEditRss"
    android:layout_alignParentStart="true"
    android:layout_marginTop="40dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"

    android:id="@+id/editTextEditFeedURL"
    android:hint="@string/placeholder_rss_feed_url"
    android:layout_below="@+id/textViewEditFeedURL"
    android:layout_alignParentStart="true"
    android:layout_marginTop="13dp"
    android:inputType="textUri"
    android:layout_alignParentEnd="true" />

<TextView
    android:text="Rss feed name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/textViewEditFeedName"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:layout_below="@+id/editTextEditFeedURL"
    android:layout_alignParentStart="true"
    android:layout_marginTop="13dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:ems="10"
    android:id="@+id/editTextEditFeedName"
    android:hint="@string/placeholder_rss_feed_name"
    android:layout_marginTop="13dp"
    android:layout_below="@+id/textViewEditFeedName"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true" />

<Button
    android:text="@string/btn_rss_save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="150dp"
    android:id="@+id/btnSave"
    style="@android:style/Widget.Button"
    android:onClick="editRssFeed" />

</RelativeLayout>
